--- a/1border/index.html
+++ b/1border/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--github접속-->
     <div class="loader">
         <div class="loader_blob">
             <img src="robert.jpg" alt="이미지">
